force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/ccrz__E_StorefrontAssociation__c.object-meta.xml
<CustomObject>
    <description>Storefront associations are used to tie other objects in the system to a particular storefront.</description>
    <label>CC StorefrontAssociation</label>
    <nameField>
        <label>CC StorefrontAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC StorefrontAssociations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>