force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Group this association applies to.</description>
    <label>Account Group</label>
    <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
    <relationshipLabel>StorefrontAssociations</relationshipLabel>
    <relationshipName>StorefrontAssociations</relationshipName>
    <type>Lookup</type>
</CustomField>