force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__CommunityName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CommunityName__c</fullName>
    <description>The name of the community this association applies to.  This is the name of the community, not the prefix or path.</description>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>