force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Object_Type__c</fullName>
    <description>DEPRECATED</description>
    <label>Object Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>