force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__RefId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RefId__c</fullName>
    <description>The actual id of the object of the type defined in refType.  This field is automatically populated depending on what else is set on the association.  The priority order is Account, then Account Group, then Community Name.</description>
    <externalId>true</externalId>
    <label>RefId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>