force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__RefType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RefType__c</fullName>
    <description>The type of object this association is referring to.  This field is automatically populated depending on what else is set on the association.  The priority order is Account, then Account Group, then Community Name.  See the ccApiStorefront.TYPE_* values.</description>
    <externalId>true</externalId>
    <label>RefType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>