force-app/main/default/objects/ccrz__E_StorefrontAssociation__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>The specific storefront this association applies to.</description>
    <label>Storefront</label>
    <length>40</length>
    <type>Text</type>
</CustomField>